# SmoothLife-CUDA

./: CMakeLists.txt  README.md
src/: encoder.cc  encoder.h  kernels.cu  main.cc  smoothlife.cc  smoothlife.h  util.h
